--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,3 @@
 {
-  "buildCommand": "pnpm build",
-  "installCommand": "pnpm install",
-  "routes": [
-    {
-      "src": "/assets/(.*)",
-      "dest": "/dist/client/assets/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/api/server"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
