--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@tanstack/router-plugin": "^1.132.0",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.22",
+    "nitro": "npm:nitro-nightly",
+    "nitro-nightly": "3.0.0-20251002-102506-5324ee74",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.6",
