--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nitro": "npm:nitro-nightly",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "streamdown": "^1.4.0",
     "tailwindcss": "^4.0.6",
     "vite-tsconfig-paths": "^5.1.4"
   },
