revamp writing stuff

--- a/biome.json
+++ b/biome.json
@@ -22,7 +22,7 @@
 		"rules": {
 			"recommended": true,
 			"suspicious": {
-				"noArrayIndexKey": "warn"
+				"noArrayIndexKey": "off"
 			}
 		}
 	},
