--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serve": "vite preview",
     "format": "biome format",
     "lint": "biome lint",
-    "check": "biome check"
+    "check": "biome check",
+    "typecheck": "npx tsc --noEmit"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
@@ -19,6 +20,7 @@
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "front-matter": "^4.0.2",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.22",
     "nitro": "npm:nitro-nightly",
