--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nitro": "npm:nitro-nightly",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.7",
     "streamdown": "^1.4.0",
     "tailwindcss": "^4.0.6",
     "vite-tsconfig-paths": "^5.1.4"
