--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "front-matter": "^4.0.2",
     "lucide-react": "^0.544.0",
